tests/error/type_match/base_case_reference_const_propagation.bz
// error: unable to match type '*int32' to '*const int32'
// note: mismatched const qualification of types 'int32' and 'const int32'
function test()
{
	let i = 0;
	let pi: *int32 = &i;
	let _: &*const int32 = pi;
}
